syntax = "proto3";

package tieba.forumRuleDetail;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.forumRuleDetail";

import "Error.proto";
import "ForumRuleDetail/ForumRuleDetailResponseData.proto";

message ForumRuleDetailResponse {
  Error error = 1;
  ForumRuleDetailResponseData data = 2;
}
