syntax = "proto3";

package tieba.frsPage;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.frsPage";

import "CommonRequest.proto";
import "ThreadInfo.proto";
import "FrsTabInfo.proto";
import "AppPosInfo.proto";
import "User.proto";
import "Page.proto";
import "Anti.proto";
import "Error.proto";
import "ForumRuleStatus.proto";
import "FrsPage/NavTabInfo.proto";
import "FrsPage/Group.proto";
import "FrsPage/AdParam.proto";
import "FrsPage/ForumInfo.proto";
import "FrsPage/ActivityHead.proto";

message FrsPageRequestData {
  optional string ad_context_list = 60;
  optional string ad_ext_params = 62;
  AdParam ad_param = 51;
  AppPosInfo app_pos = 50;
  optional int32 call_from = 56;
  optional int32 category_id = 44;
  optional int32 cid = 5;
  optional int32 class_id = 23;
  CommonRequest common = 39;
  optional int32 ctime = 17;
  optional int32 data_size = 18;
  optional int64 hot_thread_id = 58;
  optional int32 is_default_navtab = 59;
  optional int32 is_good = 4;
  optional int32 is_selection = 55;
  string kw = 1;
  optional uint64 last_click_tid = 48;
  optional string lastids = 40;
  int32 load_type = 49;
  optional int32 net_error = 19;
  optional string obj_locate = 52;
  optional string obj_source = 53;
  int32 pn = 15;
  int32 q_type = 14;
  int32 rn = 2;
  int32 rn_need = 3;
  double scr_dip = 13;
  int32 scr_h = 12;
  int32 scr_w = 11;
  optional int32 sort_type = 47;
  optional int32 st_param = 27;
  optional string st_type = 16;
  optional string up_schema = 61;
  optional int32 with_group = 8;
  optional string yuelaou_locate = 45;
}

message FrsPageRequest {
  FrsPageRequestData data = 1;
}

message FrsPageResponseData {
  User user = 1;
  ForumInfo forum = 2;
  Page page = 4;
  Anti anti = 5;
  Group group = 6;
  repeated ThreadInfo thread_list = 7;
  repeated int64 thread_id_list = 8;
  int32 is_new_url = 9;
  int32 time = 11;
  int32 ctime = 12;
  int64 logid = 13;
  int32 server_time = 14;
  repeated User user_list = 17;
  repeated FrsTabInfo frs_tab_info = 22;
  ActivityHead activity_head = 23;
  NavTabInfo nav_tab_info = 37;
  ForumRuleStatus forum_rule = 105;
}

message FrsPageResponse {
  Error error = 1;
  FrsPageResponseData data = 2;
}
