syntax = "proto3";

package tieba.getBawuInfo;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.getBawuInfo";

import "Error.proto";
import "GetBawuInfo/GetBawuInfoResponseData.proto";

message GetBawuInfoResponse {
  GetBawuInfoResponseData data = 1;
  Error error = 2;
}
