syntax = "proto3";

package tieba.getMemberInfo;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.getMemberInfo";

import "Error.proto";
import "GetMemberInfo/GetMemberInfoResponseData.proto";

message GetMemberInfoResponse {
  GetMemberInfoResponseData data = 1;
  Error error = 2;
}
