syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message LikeForumInfo {
  string forum_name = 1;
  uint64 forum_id = 2;
}
