syntax = "proto3";

package tieba.searchSug;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.searchSug";

import "Error.proto";
import "SearchSug/SearchSugResponseData.proto";

message SearchSugResponse {
  Error error = 1;
  SearchSugResponseData data = 2;
}
