syntax = "proto3";

package tieba.userPost;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.userPost";

import "Error.proto";
import "UserPost/UserPostResponseData.proto";

message UserPostResponse {
  Error error = 1;
  UserPostResponseData data = 2;
}
